ansible/files/manifests/model_gen/service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    skupper.io/address: model-gen-proxy
    skupper.io/port: '8001'
    skupper.io/proxy: tcp
  name: model-gen
  namespace: cps
  labels:
    app: model-gen
spec:
  type: NodePort
  ports:
    - name: 8001-tcp
      protocol: TCP
      port: 8001
      targetPort: 8001
      nodePort: 31001
  selector:
    app: model-gen
